force-app/main/default/objects/Ticket_Encoding_Rule_Detail__c/Ticket_Encoding_Rule_Detail__c.object-meta.xml
<CustomObject>
    <label>Ticket Encoding Rule Detail</label>
    <nameField>
        <displayFormat>TERD-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Encoding Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>