force-app/main/default/objects/Ticket_Encoding_Rule_Detail__c/fields/Expiring_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Date__c</fullName>
    <formula>TypeTicket_Encoding_Rule_No__r.Expiring_Date__c</formula>
    <label>Expiring Date</label>
    <type>Date</type>
</CustomField>