force-app/main/default/objects/Ticket_Encoding_Rule_Detail__c/fields/Invalid__c.field-meta.xml
<CustomField>
    <fullName>Invalid__c</fullName>
    <formula>IF(Expiring_Date__c&lt;Today(),True,false)</formula>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>