force-app/main/default/objects/Ticket_Encoding_Rule_Detail__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>編碼產生序號</description>
    <inlineHelpText>編碼產生序號</inlineHelpText>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>