force-app/main/default/objects/Ticket_Encoding_Rule_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TypeTicket_Encoding_Rule_No__r.RecordType.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>