force-app/main/default/objects/Ticket_Encoding_Rule_Detail__c/fields/TypeTicket_Encoding_Rule_No__c.field-meta.xml
<CustomField>
    <fullName>TypeTicket_Encoding_Rule_No__c</fullName>
    <label>TypeTicket Encoding Rule No.</label>
    <referenceTo>Ticket_Encoding_Rule__c</referenceTo>
    <relationshipLabel>Ticket Encoding Rule Details</relationshipLabel>
    <relationshipName>Ticket_Encoding_Rule_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>